--- a/styles.css
+++ b/styles.css
@@ -38,6 +38,6 @@ p{
 
 footer{
     margin-top: 20px;
-    border-color: 1px solid #3d3c3c;
+    border-top: 1px solid #3d3c3c;
     text-align: center;
 }
