--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -1,5 +1,28 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+/* Class Selectors*/
+
+.box{
+    margin: 1 rem;
+    border: 1px solid rgb(0,0,0,.1);
+    padding: 1 rem;
+    background-color: #ddd;
+    color: #000;
+}
+
+aside{
+    width: 20rem;
+    text-align: center;
+}
+
+
 body{
     font-family: "Poppins", sans-serif;
     font-weight: 400;
@@ -43,6 +66,7 @@ nav{
     display: flex;
 }
 
+
 nav a{
     display: block;
     color: var(--nav-link-color);
@@ -57,4 +81,14 @@ nav a:link, nav a:visited{
 nav a:hover{
     color: var(--nav-hover-link-color);
     background-color: var(--nav-hover-background-color);
+}
+
+main img{
+    float: right;
+}
+
+aside h2{
+    position: absolute;
+    top: 47px;
+    left: 150px;
 }
