--- a/styles.css
+++ b/styles.css
@@ -41,3 +41,34 @@ footer{
     border-top: 1px solid #3d3c3c;
     text-align: center;
 }
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+/* Class Selectors*/
+
+.box{
+    margin: 1 rem;
+    border: 1px solid rgb(0,0,0,.1);
+    padding: 1 rem;
+    background-color: #ddd;
+    color: #000;
+}
+
+aside{
+    width: 20rem;
+    text-align: center;
+}
+
+main img{
+    float: right;
+}
+
+aside h2{
+    position: absolute;
+    top: 47px;
+    left: 150px;
+}
