--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,34 @@
+main{
+    max-width: 700px;
+}
+
+
+main{
+    width: 95rem;
+    margin: 2rem;
+    border: 1px solid rgba(0, 0, 0, 0.5);
+    padding: 4rem;
+    background-color: #f5f4f7;
+    color: black;
+    text-align: center;
+}
+
+aside img{
+    width: 200px;
+    height: auto;
+}
+
+
+p{
+    padding: 0;
+}
+
+footer{
+    margin-top: 20px;
+    border-top: 1px solid #3d3c3c;
+    text-align: center;
+}
+
 *{
     margin: 0;
     padding: 0;
@@ -15,7 +46,7 @@
 }
 
 aside{
-    width: 19rem;
+    width: 20rem;
     text-align: center;
 }
 
@@ -29,17 +60,7 @@ aside h2{
     left: 150px;
 }
 
-aside img{
-    width: 200px;
-    height: auto;
-}
+ul{
+    list-style: none;
 
-p{
-    padding: 0;
-}
-
-footer{
-    margin-top: 20px;
-    border-top: 1px solid #3d3c3c;
-    text-align: center;
 }
