modified:   index.html 	modified:   styles.css

--- a/styles.css
+++ b/styles.css
@@ -1,20 +1,16 @@
 main{
-    max-width: 700px;
-}
-
-
-main{
-    width: 95rem;
+    width: 30.5rem;
     margin: 2rem;
-    border: 1px solid rgba(0, 0, 0, 0.5);
     padding: 4rem;
-    background-color: #f5f4f7;
     color: black;
     text-align: center;
+    max-width: 700px;
+    grid-column: 2/3;
+    margin: 1rem;
 }
 
 aside img{
-    width: 200px;
+    width: 250px;
     height: auto;
 }
 
@@ -41,16 +37,18 @@ footer{
     margin: 1 rem;
     border: 1px solid rgb(0,0,0,.1);
     padding: 1 rem;
-    background-color: #ddd;
+    background-color: #f0f0f0;
     color: #000;
 }
 
 aside{
     width: 20rem;
+    height: auto;
     text-align: center;
     position: relative;
     grid-column: 1/2;
     grid-row: 1/2;
+    padding: 1rem;
 }
 
 main img{
@@ -60,7 +58,8 @@ main img{
 aside h2{
     position: absolute;
     top: 47px;
-    left: 150px;
+    left: 80px;
+    color: #000;
 }
 
 ul{
@@ -90,17 +89,15 @@ nav a{
     color: #fff;
 }
 
-h1{
-    border: #000;
+main h1{
+    border-bottom: 2px solid #000;
     border-width: 2px;
+    margin-bottom: 20px;
 }
 
 .grid {
     display: grid;
     align-items: center;
-}
-
-main{
-    grid-column: 2/3;
-    margin: 1rem;
+    width: 800px;
+    margin: 0 auto;
 }
