--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,16 @@ header {
     align-items: center;
 }
 
+
+/* Header and Navigation */
+header {
+    background-color: var(--nav-background-color);
+    padding: 1rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
 header nav {
     display: flex;
     gap: 1rem;
@@ -49,6 +59,11 @@ header nav a:hover {
     color: var(--nav-hover-link-color);
     background-color: var(--nav-hover-background-color);
     border-radius: 5px;
+}
+
+.logo {
+    width: 80px;
+    height: 50px;
 }
 
 /* Main Content */
