--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -57,18 +57,18 @@ header {
     padding: 1rem;
     display: flex;
     justify-content: space-between;
-    align-items: center; /* Center vertically */
+    align-items: center; 
 }
 
 .nav {
     display: flex;
-    align-items: center; /* Center vertically */
+    align-items: center; 
 }
 
 nav {
     display: flex;
     gap: 1rem;
-    align-items: center; /* Center vertically */
+    align-items: center; 
 }
 
 nav a {
@@ -76,8 +76,8 @@ nav a {
     text-decoration: none;
     padding: 0.5rem 1rem;
     transition: color 0.3s, background-color 0.3s;
-    display: flex; /* Use Flexbox */
-    align-items: center; /* Center vertically */
+    display: flex; 
+    align-items: center; 
 }
 
 
